Fixed group renaming on firefox

--- a/ota-plus-web/app/assets/css/sota-styles.scss
+++ b/ota-plus-web/app/assets/css/sota-styles.scss
@@ -430,6 +430,9 @@ button {
                         position: relative;
 
                         .list-group-item {
+                            color: #555;
+                            cursor: pointer;
+                            cursor: hand;
                             height: 94px;
                             padding: 0;
                             transition: background-color 0.3s ease-in;
@@ -437,6 +440,10 @@ button {
                             border-right: 0;
                             border-radius: 0;
 
+                            &:hover, &:focus, &:active {
+                                background: #eee;
+                            }
+                            
                             &.droppable {
                                 &.active {
                                     color: #888;
@@ -451,7 +458,7 @@ button {
                         }
                     }
 
-                    button.list-group-item {
+                    .list-group-item {
                         &.checked {
                             background-color: #f5f5f5;
                         }
